--- a/Maquette 2020/css/imp3DModification.css
+++ b/Maquette 2020/css/imp3DModification.css
@@ -1,106 +1,32 @@
+.dema{
+            margin-top: -30px;
+        }
+        .ui-table-columntoggle-btn{
+            display: none;
+        }
+        .accordion{
+            margin-bottom: -25px;
+        }
+        .accordion ul li{
+            margin-top: -36px;
+            margin-bottom: -34px;
 
-/* #CLEARFIX
-================================================== */
-.group-imp:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* #HEADER
-================================================== */
-
-
-header {
-    background: #3279a1;
-    text-align: center;
-    padding: 1.5em 1em 1em 1em;
-}
-
-header #logo a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: .05em;
-}
-
-/* #NAVIGATION
-================================================== */
-
-#mainnav {
-    background: #333;
-    color: #fff;
-    font-weight: bold;
-    text-transform:uppercase;
-    letter-spacing: .05em;
-}
-
-#mainnav #menu {
-    display: none;
-    padding: .8em 1.5em;
-    cursor: pointer;
-}
-
-
-#mainnav ul {
-    display: block;
-    margin: 0;
-    text-align: center;
-}
-
-#mainnav ul li {
-    margin: 0;
-    list-style: none;
-    display: inline-block;
-}
-
-#mainnav ul li a {
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
-    padding: .9em 1.5em .8em 1.5em;
-}
-
-#mainnav ul li a:hover {
-    color: #000;
-    background: #aaa;
-}
-
-.content {
-	  padding: 1.5em;
-}
-
-
-/* MEDIA QUERIES
-Description: Define screen-size breakpoints here.
-(e.g. Desktop, Tablet, Mobile)
-===================================== */
-
-/* Tablet (Between 768px - 992px)*/
-@media all and (min-width: 768px) and (max-width: 992px) {
-
-}
-
-/* MOBILE (Smaller than 768px)*/
-@media all and (max-width: 767px) {
-	
-    #mainnav #menu {
-        display: block;
-    }
-
-    #mainnav ul {
-        display: none;
-        background: #666;
-        padding: 1em;
-        text-align: left;
-    }
-    #mainnav ul li {
-        display: block;
-    }
-
-    #mainnav ul li a {
-        display: block;
-        padding: .75em 1.5em .5em 1.5em;
-    }
-
-}
+        }
+        .arreglo-accordion{
+            margin-bottom:px;
+        }
+        .fin{
+            margin-bottom: 33px;
+        }
+        .arreglo-accordion ul li{
+            margin-bottom: -17px;
+        }
+         .arreglo-accordion ul li button{
+            float: right;
+        }
+        section .ui-btn{
+            width: 400px;
+        }
+        section .ui-input-text{
+            width: 400px;
+        }
