--- a/Maquette 2020/css/imp3DModification.css
+++ b/Maquette 2020/css/imp3DModification.css
@@ -12,8 +12,8 @@
             margin-bottom: -34px;
 
         }
-        .arreglo-accordion{
-            margin-bottom:px;
+        .arreglo-accordion a{
+            text-decoration: none;
         }
         .fin{
             margin-bottom: 33px;
@@ -25,8 +25,8 @@
             float: right;
         }
         section .ui-btn{
-            width: 400px;
+            width: 320px;
         }
         section .ui-input-text{
-            width: 400px;
+            width: 320px;
         }
